--- a/infinicraft-mod/src/main/resources/assets/infinicraft/lang/en_us.json
+++ b/infinicraft-mod/src/main/resources/assets/infinicraft/lang/en_us.json
@@ -13,7 +13,7 @@
   "text.config.infinicraft-config.option.CHAT_API_MODEL": "GPT model",
   "text.config.infinicraft-config.option.CHAT_API_MODEL.tooltip": "Name of the model to use.\nExample: llama3 for Ollama, or gpt-3.5-turbo for ChatGPT",
   "text.config.infinicraft-config.option.SD_DAEMON_BASE": "SD Server base",
-  "text.config.infinicraft-config.option.SD_DAEMON_BASE.tooltip": "The IP and port where the infinicraft-client is running.\nExample: http://127.0.0.1:17707 for localhost on the default port"
+  "text.config.infinicraft-config.option.SD_DAEMON_BASE.tooltip": "The IP and port where the infinicraft-client is running.\nExample: http://127.0.0.1:17707 for localhost on the default port",
   "text.config.infinicraft-config.option.PROMPT": "Chat Prompt",
   "text.config.infinicraft-config.option.PROMPT.tooltip": "Prompt for OpenAI-like API. \nWe recommend not to change this."
 }
