--- a/infinicraft-mod/src/main/resources/assets/infinicraft/lang/en_us.json
+++ b/infinicraft-mod/src/main/resources/assets/infinicraft/lang/en_us.json
@@ -6,24 +6,13 @@
   "block.infinicraft.smooth_infinitum_block": "Smooth Infinitum Block",
   "block.infinicraft.infinitum_column": "Infinitum Column",
   "text.config.infinicraft-config.title": "Infinicraft",
-  "text.config.infinicraft-config.option.CHAT_API_KEY": "Chat API key",
-  "text.config.infinicraft-config.option.CHAT_API_KEY.tooltip": "API key for OpenAI-like API.",
-  "text.config.infinicraft-config.option.CHAT_API_BASE": "Chat API base",
-  "text.config.infinicraft-config.option.CHAT_API_BASE.tooltip": "Base URL of OpenAI-like API.\nExample: https://api.openai.com/v1",
-  "text.config.infinicraft-config.option.CHAT_API_MODEL": "GPT model",
-  "text.config.infinicraft-config.option.CHAT_API_MODEL.tooltip": "Name of the model to use.\nExample: llama3 for Ollama, or gpt-3.5-turbo for ChatGPT",
-  "text.config.infinicraft-config.option.SD_DAEMON_BASE": "SD Server base",
-  "text.config.infinicraft-config.option.SD_DAEMON_BASE.tooltip": "The IP and port where the infinicraft-client is running.\nExample: http://127.0.0.1:17707 for localhost on the default port",
-  "text.config.infinicraft-config.option.USE_GENERATOR": "Enable texture generation?",
-  "text.config.infinicraft-config.option.PROMPT": "Chat Prompt",
-  "text.config.infinicraft-config.option.PROMPT.tooltip": "Prompt for OpenAI-like API. \nWe recommend not to change this.",
-  "text.config.infinicraft-config.option.IS_OLLAMA": "Is Ollama",
-  "text.config.infinicraft-config.option.IS_OLLAMA.tooltip": "Only enable if you are using a local Ollama model.",
+  "text.config.infinicraft-config.option.INFINICRAFT_SERVER": "Infinicraft Server",
+  "text.config.infinicraft-config.option.INFINICRAFT_SERVER.tooltip": "URL of a functioning Infinicraft server. Default is https://localhost:17707",
+  "text.config.infinicraft-config.option.SECONDS_TO_TIMEOUT": "Seconds before a request times out:",
+  "text.config.infinicraft-config.option.SECONDS_TO_TIMEOUT.tooltip": "Infinicraft will wait for the Infinicraft server to respond with an for this many seconds before giving up.",
   "text.config.infinicraft-config.option.SHOW_DESCRIPTION": "Show description?",
   "text.config.infinicraft-config.option.SHOW_DESCRIPTION.tooltip": "Show description of custom items in tooltip.",
   "text.config.infinicraft-config.option.SHOW_RECIPE": "Show recipe?",
   "text.config.infinicraft-config.option.SHOW_RECIPE.tooltip": "Show recipe of custom items in tooltip.",
-  "text.config.infinicraft-config.section.sdApiSection": "Texture Generator",
-  "text.config.infinicraft-config.section.chatApiSection": "Chat API",
   "text.config.infinicraft-config.section.mainSection": "Main"
 }
