Adjust prompts to ensure non-edibles have zero nutritional value, added fun particles and crafting completion sound for QoL. Moved server script variables to the top for easier editing.

--- a/infinicraft-mod/src/main/resources/assets/infinicraft/lang/en_us.json
+++ b/infinicraft-mod/src/main/resources/assets/infinicraft/lang/en_us.json
@@ -14,5 +14,6 @@
   "text.config.infinicraft-config.option.SHOW_DESCRIPTION.tooltip": "Show description of custom items in tooltip.",
   "text.config.infinicraft-config.option.SHOW_RECIPE": "Show recipe?",
   "text.config.infinicraft-config.option.SHOW_RECIPE.tooltip": "Show recipe of custom items in tooltip.",
-  "text.config.infinicraft-config.section.mainSection": "Main"
+  "text.config.infinicraft-config.section.mainSection": "Main",
+  "sounds.infinicraft.drill": "Drilling Sounds"
 }
